Change url in image load

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="src/css/app.css">
 </head>
 <body>
-<app><img src="assets/images/hex-load.gif" class="preloader"></app>
+<app><img src="src/images/hex-load.gif" class="preloader"></app>
 
 <script>
     System.config({
